just doin whatever intellij told me to tbh (#543)
Co-authored-by: Eccentric Devotion <eccentricdevotion@gmail.com>